--- a/public/css/style.css
+++ b/public/css/style.css
@@ -579,10 +579,6 @@ video {
   margin-top: 0.75rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
 .ml-6 {
   margin-left: 1.5rem;
 }
@@ -593,10 +589,6 @@ video {
 
 .flex {
   display: flex;
-}
-
-.grid {
-  display: grid;
 }
 
 .hidden {
@@ -611,6 +603,14 @@ video {
   height: 2.5rem;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
 .w-full {
   width: 100%;
 }
@@ -619,17 +619,12 @@ video {
   width: 2.5rem;
 }
 
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
+.w-8 {
+  width: 2rem;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.w-5 {
+  width: 1.25rem;
 }
 
 .items-center {
@@ -638,10 +633,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -739,11 +730,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .font-semibold {
@@ -849,20 +835,8 @@ video {
     margin-top: 1.25rem;
   }
 
-  .md\:mr-2 {
-    margin-right: 0.5rem;
-  }
-
   .md\:ml-4 {
     margin-left: 1rem;
-  }
-
-  .md\:mt-20 {
-    margin-top: 5rem;
-  }
-
-  .md\:mt-14 {
-    margin-top: 3.5rem;
   }
 
   .md\:block {
@@ -886,24 +860,16 @@ video {
     height: 2.5rem;
   }
 
-  .md\:h-40 {
-    height: 10rem;
-  }
-
-  .md\:h-16 {
-    height: 4rem;
-  }
-
   .md\:h-14 {
     height: 3.5rem;
   }
 
-  .md\:h-4 {
-    height: 1rem;
+  .md\:h-1 {
+    height: 0.25rem;
   }
 
-  .md\:h-12 {
-    height: 3rem;
+  .md\:h-11 {
+    height: 2.75rem;
   }
 
   .md\:w-10 {
@@ -918,24 +884,12 @@ video {
     width: 80%;
   }
 
-  .md\:w-4 {
-    width: 1rem;
-  }
-
-  .md\:w-40 {
-    width: 10rem;
-  }
-
-  .md\:w-16 {
-    width: 4rem;
-  }
-
   .md\:w-14 {
     width: 3.5rem;
   }
 
-  .md\:w-12 {
-    width: 3rem;
+  .md\:w-11 {
+    width: 2.75rem;
   }
 
   .md\:grid-cols-2 {
@@ -946,16 +900,24 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .md\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+
   .md\:p-3 {
     padding: 0.75rem;
   }
 
   .md\:p-7 {
     padding: 1.75rem;
-  }
-
-  .md\:p-6 {
-    padding: 1.5rem;
   }
 
   .md\:px-36 {
@@ -975,10 +937,6 @@ video {
 
   .md\:pt-8 {
     padding-top: 2rem;
-  }
-
-  .md\:pt-10 {
-    padding-top: 2.5rem;
   }
 
   .md\:text-base {
